# alife_cuda

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  profile_output.ncu-rep
resources/: fluid2_params.txt  imgui.ini
resources/shaders/: circle.frag  circle.vert  line.frag  line.vert  polygon.frag  polygon.vert  rect.frag  rect.vert  rect_simple.frag  rect_simple.vert  rect_tex.frag  rect_tex.vert  text.frag  text.vert  tri.vert
src/: main.cu  main2.cu  spatial_sort.cu  spatial_sort.cuh
src/config/: config.cpp  config.h  sim_params.h
src/graphics/: ExtendViewport.cpp  ExtendViewport.h  Shader.cpp  Shader.h  extend_viewport.cpp  extend_viewport.h  fluid_render.cu  fluid_render.cuh  shader.cpp  shader.h  soil_render.cu  soil_render.cuh  tree_render.cu  tree_render.cuh
src/graphics/renderers/: CircleRenderer.cpp  CircleRenderer.cu  CircleRenderer.cuh  CircleRenderer.h  FontRenderer.cpp  FontRenderer.h  LineRenderer.cpp  LineRenderer.cu  LineRenderer.cuh  LineRenderer.h  PolygonRenderer.cpp  PolygonRenderer.h  RectRenderer.cpp  RectRenderer.cu  RectRenderer.cuh  RectRenderer.h  RectTexRenderer.cu  RectTexRenderer.cuh  SimpleRectRenderer.cu  SimpleRectRenderer.cuh  circle_renderer.cu  circle_renderer.cuh  font_renderer.cpp  font_renderer.h  line_renderer.cu  line_renderer.cuh  rect_renderer.cu  rect_renderer.cuh  rect_tex_renderer.cu  rect_tex_renderer.cuh  simple_rect_renderer.cu  simple_rect_renderer.cuh
src/screens/: FluidSoil.cu  FluidSoil.cuh  FluidTest.cu  FluidTest.cuh  FluidTest2.cu  FluidTest2.cuh  SoilTest.cu  SoilTest.cuh  TexCUDATest.cu  TexCUDATest.cuh  TreeTest.cu  TreeTest.cuh  fluid_soil.cu  fluid_soil.cuh  fluid_test.cu  fluid_test.cuh  fluid_test2.cu  fluid_test2.cuh  soil_test.cu  soil_test.cuh  tex_cuda_test.cu  tex_cuda_test.cuh  tree_test.cu  tree_test.cuh
src/systems/: CustomMath.cu  CustomMath.cuh  DefaultScreen.cu  DefaultScreen.cuh  Fluid.cu  Fluid.cuh  Game.cu  Game.cuh  Kernels.cu  Kernels.cuh  ParameterManager.h  ParticleFluid.cu  ParticleFluid.cuh  ParticleFluid2.cu  ParticleFluid2.cuh  ProfilerGUI.cu  ProfilerGUI.cuh  Resources.cu  Resources.cuh  Screen.h  SoAHelper.h  Soil.cu  Soil.cuh  TimingProfiler.cu  TimingProfiler.cuh  TreeAlgos.cu  TreeAlgos.cuh  TreeTypes.cuh  Trees.cu  Trees.cuh  Trees2.cu  Trees2.cuh  TreesSoA.cu  TreesSoA.cuh  World.cpp  World.cu  World.cuh  World.h  cuda_utils.cuh  custom_math.cu  (+28 more)
src/systems/terrain/: FractalNoise.cu  FractalNoise.cuh  Seamless.cu  Seamless.cuh  fractal_noise.cu  fractal_noise.cuh  seamless.cu  seamless.cuh
src/systems/ui/: Container.cu  Container.cuh  WorldUI.cu  WorldUI.cuh  container.cu  container.cuh  world_ui.cu  world_ui.cuh
